--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/">
+  <base href="">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Portfólio Lucas Mosart">
+  <meta name="description" content="A new Flutter project.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -35,7 +35,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '3481666367';
+    var serviceWorkerVersion = '722219660';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
@@ -149,7 +149,7 @@
       <span></span>
       <span></span>
     </div>
-    <img src="main-icon.png" alt="logo">
+    <img src="main-icon.png" alt="My App Logo">
   </div>
 </body>
 
